feat: mascara cpf pagina de cadastro

--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.0",
+    "react-input-mask": "^2.0.4",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.0",
     "sonner": "^1.5.0",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tinymce": "^7.2.1",
@@ -51,6 +52,7 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-input-mask": "^3.0.5",
     "@types/tinymce": "^4.6.9",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
